# jtl

./: .gitignore  CASE-STUDY_Prowler.md  README.md  jtl.py  main.py  prowler-etl.json  pyproject.toml
test/: test_file_cases.py  test_jtl.py  test_meta_file_cases.py
test/examples/arrays/: dst.json  etl.json  expect.json  src.json
test/examples/context-references-in-prefix-and-suffix/: etl.json  expect.json  src.json
test/examples/context-references-in-prefix-and-suffix-replace/: etl.json  expect.json  src.json
test/examples/create_dst/: etl.json  expect.json  src.json
test/examples/delimiter_per_row/: etl.json  expect.json  src.json
test/examples/delimiter_strings/: dst.json  expect.json  options.json  src.json
test/examples/inline_context_separate_objects/: etl.json  expect.json
test/examples/inline_context_trailing/: src.json
test/examples/nested/: etl.json  expect.json  src.json
test/examples/prefix-and-suffix-replace/: etl.json  expect.json  src.json
test/examples/prefix-and-suffix-upsert/: etl.json  expect.json
test/examples/prowler/: etl.json
test/examples/prowler-filter-failing-only/: etl.json  expect.json
test/examples/prowler-with-prelude/: etl.json  expect.json  src.json
test/examples/strings/: dst.json  etl.json  expect.json  src.json
test/examples/with_prelude/: etl.json  expect.json  src.json
test/meta-examples/inline_chain/: etl_step1.json  etl_step2.json  meta.json
test/meta-examples/precedence_override/: etl_step1.json  expect.json  meta.json  src.json
